--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "library",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://lycanthoss.github.io/react-library",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@fortawesome/free-regular-svg-icons": "^5.13.1",
@@ -15,6 +16,8 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
